Set java version to 11